
                         JGoodies Looks
                          Release Notes
                        

CHANGES IN 2.8.0 --------------------------------------------------------

    o Moved to Java 7.
    o Requires the JGoodies Common 1.9.


CHANGES IN 2.7.0 --------------------------------------------------------

    o Fixed #setMicroLayoutPolicy(MicroLayoutPolicy) signature in
      WindowsLookAndFeel and PlasticLookAndFeel that accepted a
      MicroLayout instead of a MicroLayoutPolicy.
    o Removed the Look&Feel replacement information from the Options.
    o Removed obsolete code.
    o Suppressed compiler warnings. 
    o Slightly improved the build script.


CHANGES IN 2.6.0 --------------------------------------------------------

    o Improved the display of non-western fonts. Overhauled the lookup 
      of the Windows control font for the default Windows font policy 
      and the default Plastic-on-Windows font policy. 
      These font policies now try to build composite fonts.
    o Removed font policies for the Looks 1.x. 
    o Removed unnecessary code.
    o Adjusted tests.
    o Source cleanup.
    o Compiled against the JGoodies Common 1.8.


CHANGES IN 2.5.3 --------------------------------------------------------

    o Compiled against the JGoodies Common 1.5.
    o Source code cleanup.
    o Fixed and extended the pom.xml:
      - added schema
      - fixed scope for dependencies
      - added Maven Central deployer
      - added build data


CHANGES IN 2.5.2 --------------------------------------------------------

    o Fixed the broken version in the pom.xml.


CHANGES IN 2.5.1 --------------------------------------------------------

    o The javadocs, main and test sources are delivered as JARs.


CHANGES IN 2.5.0 --------------------------------------------------------

    o Requires Java 6 and JGoodies Common 1.3.
    o Removed deprecated code:
      - LookUtils#IS_LAF_WINDOWS_XP_ENABLED
      - LookUtils#IS_LOW_RESOLUTION