@@ -42,7 +42,7 @@
 	These have been optimized for readability, precise micro-design and usability. 
 
 	<p>
-	The JGoodies Looks require Java 6 or later. 
+	Since the JGoodies Looks 2.8 Java 7 or later is required. 
 	Versions for older Java runtimes are available at
 	<a href="http://joodies.com/downloads/archive.html">here</a>.
 
